--- a/src/makefile
+++ b/src/makefile
@@ -12,26 +12,26 @@ CCFLAGS_FFT = -I../../fftw3/unix/api -DFFT_UNDULATION_EVAL -DTHREADS -O3 -c
 LINKLIBS_FFT = -L../../fftw3/unix/.libs -lfftw3 -lm -lpthread -lstdc++
 
 fft_undulation_eval: bionet.o neuron.o network.o behavior.o networkMorph.o networkMorphoGenesis.o \
-networkHomomorph.o undulationNetworkHomomorph.o neuronSimNetworkHomomorph.o networkHomomorphoGenesis.o \
+networkHomomorph.o undulationNetworkHomomorph.o neuronSimNetworkHomomorph.o c302SimNetworkHomomorph.o networkHomomorphoGenesis.o \
 networkIsomorph.o networkIsomorphoGenesis.o \
-neuronSim.o neuronHocDoc.o mutableParm.o random.o fileio.o gettime.o
+neuronSim.o neuronHocDoc.o c302Sim.o mutableParm.o random.o fileio.o gettime.o
 	$(CC) $(CCFLAGS_FFT) networkHomomorph.cpp
 	$(CC) -o ../bin/bionet bionet.o neuron.o network.o behavior.o \
         networkMorph.o networkMorphoGenesis.o \
-        networkHomomorph.o undulationNetworkHomomorph.o neuronSimNetworkHomomorph.o networkHomomorphoGenesis.o \
+        networkHomomorph.o undulationNetworkHomomorph.o neuronSimNetworkHomomorph.o c302SimNetworkHomomorph.o networkHomomorphoGenesis.o \
         networkIsomorph.o networkIsomorphoGenesis.o \
-        neuronSim.o neuronHocDoc.o mutableParm.o \
+        neuronSim.o neuronHocDoc.o c302Sim.o mutableParm.o \
         random.o fileio.o gettime.o $(LINKLIBS_FFT)
 
 ../bin/bionet: bionet.o neuron.o network.o behavior.o networkMorph.o networkMorphoGenesis.o \
-networkHomomorph.o undulationNetworkHomomorph.o neuronSimNetworkHomomorph.o networkHomomorphoGenesis.o \
+networkHomomorph.o undulationNetworkHomomorph.o neuronSimNetworkHomomorph.o c302SimNetworkHomomorph.o networkHomomorphoGenesis.o \
 networkIsomorph.o networkIsomorphoGenesis.o \
-neuronSim.o neuronHocDoc.o mutableParm.o random.o fileio.o gettime.o
+neuronSim.o neuronHocDoc.o c302Sim.o mutableParm.o random.o fileio.o gettime.o
 	$(CC) -o ../bin/bionet bionet.o neuron.o network.o behavior.o \
         networkMorph.o networkMorphoGenesis.o \
-        networkHomomorph.o undulationNetworkHomomorph.o neuronSimNetworkHomomorph.o networkHomomorphoGenesis.o \
+        networkHomomorph.o undulationNetworkHomomorph.o neuronSimNetworkHomomorph.o c302SimNetworkHomomorph.o networkHomomorphoGenesis.o \
         networkIsomorph.o networkIsomorphoGenesis.o \
-        neuronSim.o neuronHocDoc.o mutableParm.o \
+        neuronSim.o neuronHocDoc.o c302Sim.o mutableParm.o \
         random.o fileio.o gettime.o $(LINKLIBS)
 
 bionet.o: bionet.cpp
@@ -58,6 +58,9 @@ undulationNetworkHomomorph.o: undulationNetworkHomomorph.hpp undulationNetworkHo
 neuronSimNetworkHomomorph.o: neuronSimNetworkHomomorph.hpp neuronSimNetworkHomomorph.cpp networkHomomorph.hpp network.hpp
 	$(CC) $(CCFLAGS) neuronSimNetworkHomomorph.cpp
 
+c302SimNetworkHomomorph.o: c302SimNetworkHomomorph.hpp c302SimNetworkHomomorph.cpp networkHomomorph.hpp network.hpp
+	$(CC) $(CCFLAGS) c302SimNetworkHomomorph.cpp
+
 networkIsomorph.o: networkIsomorph.hpp networkIsomorph.cpp networkMorph.hpp network.hpp
 	$(CC) $(CCFLAGS) networkIsomorph.cpp
 
@@ -75,6 +78,9 @@ neuronHocDoc.o: neuronHocDoc.hpp neuronHocDoc.cpp
 
 neuronSim.o: neuronSim.hpp neuronSim.cpp
 	$(CC) $(CCFLAGS) neuronSim.cpp
+
+c302Sim.o: c302Sim.hpp c302Sim.cpp
+	$(CC) $(CCFLAGS) c302Sim.cpp
 
 mutableParm.o: mutableParm.hpp mutableParm.cpp
 	$(CC) $(CCFLAGS) mutableParm.cpp
